# points-to-constraintgen

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindPythonModule.cmake  PointsToFunctions.cmake  cmake_functions.cmake
docs/: Abstract.tex  Building.tex  Doxyfile  GettingStarted.tex  GettingStartedWithLLVM.tex  Makefile  Motivation.tex  TODO  TestingUsingLIT.md  Title.tex  UsingLLVMOpt.tex
docs/Report/: constraintgen.tex
include/: Adaptors.h  CMakeLists.txt  Constraint.h  ConstraintBuilder.h  DotGraph.h  PointerInfo.h  PointerSymbolTable.h  PointsToConstraints.h  PointsToNode.h  Variable.h
samples/: CMakeLists.txt
samples/Andersen/: AndersensConstraintSolver.cc  AndersensConstraintSolver.h  AndersensGraphDump.cc  CMakeLists.txt
samples/SamplePass/: CMakeLists.txt  ConstraintGenPass.cc
src/: .ConstraintBuilder.cc.swp  CMakeLists.txt  Constraint.cc  ConstraintBuilder.cc  ConstraintGenPass.cc  PointerSymbolTable.cc  PointsToConstraints.cc  PointsToNode.cc  Variable.cc
tests/: CMakeLists.txt  TestPass.cc  getelementptr.ll  lit.cfg.in  simple.ll  test1.ll  test2.ll  test3.ll  test4.ll  test5.ll  test6.ll  test7.ll
tests/BasicPointsToAnalysis/: BasicPointsToAnalysis.cc  CMakeLists.txt
tests/ConstraintGenPass/: test1.c  test2.c  test3.c  test4.c  test5.c  test6.c  test7.c  test8.c  test9.c
tests/GPG/: IndirectionList.h  IndirectionListMap.cc  IndirectionListMap.h
tests/GPG/GPG_implementation/: Gpb.cpp  Gpb.h  Gpg.cpp  Gpg.h  Gpu.cpp  Gpu.h  GpuFlow.cpp  GpuFlow.h
utils/: AssignTemporaryName.cc  SimpleExample.cpp  gepinstruction.cpp
utils/ADT/: DisjointSet.h  RecursiveSet.h
